--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 }
 
 body {
-  overflow: hidden;
-  height: 100vh;
+ min-height: 100vh;
   position: relative;
   color: white;
 }
@@ -181,4 +180,11 @@ body.light-mode .btn:hover {
 .contact-form button {
   margin-top: 1rem;
   width: 100%;
+}
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
